--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '1.10-SNAPSHOT'
     id 'maven-publish'
+    id 'me.shedaniel.unified-publishing' version '0.1.+'
 }
 
 version = project.mod_version
@@ -85,5 +86,34 @@ publishing {
         // Notice: This block does NOT have the same function as the block in the top level.
         // The repositories here will be used for publishing your artifact, not for
         // retrieving dependencies.
+    }
+}
+
+unifiedPublishing {
+    project {
+        displayName = "Valor Dungeons $project.version"
+        gameVersions = ["1.21.1"]
+        gameLoaders = ["fabric"]
+        releaseType = "alpha" // Optional, use "release", "beta" or "alpha"
+        changelog = rootProject.file("changelog.md").text
+
+        mainPublication tasks.remapJar // Declares the publicated jar
+
+        relations {
+            depends {
+                curseforge = "fabric-api"
+            }
+            depends {
+                curseforge = "dungeonz"
+            }
+        }
+
+        var cfToken = System.getenv("CURSEFORGE_TOKEN")
+        if (cfToken != null) {
+            curseforge {
+                token = cfToken
+                id = "996155" // Required, must be a string, ID of CurseForge project
+            }
+        }
     }
 }
